# mcrcoin

./: .gitignore  Cargo.toml  README.md  docker-compose.testnet.yml
.github/workflows/: ci.yml
config/: example_config.toml
consensus/: Cargo.toml
consensus-network/: Cargo.toml  build.rs
consensus-network/src/: lib.rs  lib.rs.bak.1759894633  proto_proxy.rs
consensus/src/: engine.rs  lib.rs  types.rs
consensus/tests/: vrf_crossnode.rs
evidence/: Cargo.toml
evidence/src/: lib.rs
mempool/: Cargo.toml
mempool/src/: lib.rs
node/: Cargo.toml  Cargo.toml.bak  Cargo.toml.bak.1759838849  Cargo.toml.bak.1759839030  Cargo.toml.bak.1759839283
node/config/: node1.toml  node2.toml  node3.toml
node/src/: main.rs  main.rs.bak  main.rs.bak.vrf_pubkey_fix  main.rs.bak2  main.rs.e0282.bak  main.rs.fix.bak  store.rs  vrf_validation.rs
node/src/net/: vrf_message.rs
node/tools/: migrate_sled_to_rocks.rs.disabled
proto/: consensus.proto  vrf.proto
state/: Cargo.toml
state/src/: lib.rs
tools/: node1.sk  node2.sk  node3.sk
vrf/: Cargo.toml  build.rs
vrf-proto/: Cargo.toml  build.rs
vrf/examples/: regen.rs
vrf/src/: keys.rs  lib.rs  verify.rs
