[package]
name = "vrf"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
base64 = "0.21"
rand = "0.8"
rand_core = "0.6"
zeroize = "1.6"
aes-gcm = "0.10"       # AES-GCM for encryption (Aes256Gcm)
scrypt = "0.8"         # scrypt KDF for password -> key
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vrf-r255 = "0.1.0"
